bug 8962: adding a check for disabled accounts